# dot-config

./: LIECENCE  README.md  constants.py  dot-config.py  exceptions.py  install.sh  makefile  packages.sh  pyproject.toml  utils.py  zsh.sh
.github/dockerfiles/: centos.dockerfile  fedora.dockerfile
.github/workflows/: test-environment-initializing.yml
config/: .aliases.zsh  .autocomplete.zsh  .default-editor.zsh  .environments.zsh  .history.zsh  .main.zsh  .misc.zsh  .p10k.zsh  .plugins.zsh  .zplug.zsh  .zshrc
linux/: main.sh  zsh.sh
